--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "Tesis api rest",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "serve": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
